# product-configurator

./: .copier-answers.yml  .pre-commit-config.yaml  README.md
product_configurator/: README.rst
product_configurator/data/: menu_configurable_product.xml
product_configurator/demo/: product_template.xml
product_configurator/i18n/: es.po  es_VE.po  it.po  sl.po  tr.po
product_configurator/models/: product_attribute.py
product_configurator/views/: product_attribute_view.xml  product_config_view.xml  product_view.xml
product_configurator/wizard/: product_configurator.py  product_configurator_view.xml
product_configurator_mrp/: README.rst
product_configurator_mrp/i18n/: es.po  it.po  sl.po
product_configurator_mrp/models/: product_config.py
product_configurator_mrp/static/description/: index.html
product_configurator_mrp/views/: mrp_view.xml
product_configurator_mrp/wizard/: product_configurator_mrp.py
product_configurator_mrp_component/i18n/: it.po
product_configurator_sale/: README.rst  __manifest__.py
product_configurator_sale/i18n/: es.po  es_VE.po  sl.po  tr.po
product_configurator_sale/static/description/: index.html
product_configurator_sale/wizard/: product_configurator.py
setup/_metapackage/: pyproject.toml
website_product_configurator/: README.rst
website_product_configurator/i18n/: es.po  es_VE.po  it.po
website_product_configurator/static/description/: index.html
website_product_configurator_mrp/i18n/: it.po
